--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="fs-2">全程服务.</h3>
+            <h3 class="fs-2"><font color=#46A3FF>全程服务.</font></h3>
             <p>专业团队为您提供全方位一站式服务：赴美指导，专家预约，海外住宿，就医全程陪同，新生儿证件办理，产后母婴健康管理.</p>
 
           </div>
@@ -70,7 +70,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="fs-2">顶尖技术.</h3>
+            <h3 class="fs-2"><font color=#46A3FF>顶尖技术.</font></h3>
             <p>Beyond Legacy与全球顶尖的胚胎实验室合作，采用最先进的第三代试管和基因筛查及遗传病检测技术，确保优异的成功率.</p>
 
           </div>
@@ -86,7 +86,7 @@
             </svg>
           </div>
           <div>
-            <h3 class="fs-2">法律保护.</h3>
+            <h3 class="fs-2"><font color=#46A3FF>法律保护.</font></h3>
             <p>全程合法合规并在律师和法院的监管下进行，宝宝出生后即为美国公民，21周岁后可为父母办理亲属移民.私密就医环境，客户信息严格保密.</p>
 
           </div>
@@ -109,7 +109,7 @@
           </p>
 
           <p class="col-lg-8 mx-auto lead mt-2">
-            合法的爱心助孕 基因筛查 人工受精 洗精
+            合法爱心助孕 基因筛查 人工受精 洗精
           </p> 
 
         </div>
@@ -131,8 +131,8 @@
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
+          <div class="card mb-4 rounded-3 shadow-sm border-dark">
+            <div class="card-header py-3 text-bg-dark border-dark">
               <h4 class="my-0 fw-normal">赴美前</h4>
             </div>
             <div class="card-body">
@@ -156,15 +156,15 @@
               <ul class="list-unstyled mt-3 mb-4">
                 <li>海外生活指导与接送服务</li>
                 <li>海外IVF试管看诊陪同</li>
-                <li>爱心妈妈(代母)助孕选择与协调</li>
+                <li>爱心助孕24全程协助</li>
               </ul>
 
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
+          <div class="card mb-4 rounded-3 shadow-sm border-dark">
+            <div class="card-header py-3 text-bg-dark custom-bg">
               <h4 class="my-0 fw-normal">生产后</h4>
             </div>
             <div class="card-body">
@@ -172,7 +172,7 @@
               <ul class="list-unstyled mt-3 mb-4">
                 <li>孕期产检陪同和陪产</li>
                 <li>海外新生儿证件办理</li>
-                <li>新生儿临时监护权及月嫂管理</li>
+                <li>新生儿临时监护及月嫂管理</li>
               </ul>
 
             
