--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-dark">
-            <div class="card-header py-3 text-bg-dark border-dark">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3">
               <h4 class="my-0 fw-normal">赴美前</h4>
             </div>
             <div class="card-body">
@@ -147,8 +147,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-dark">
-            <div class="card-header py-3 text-bg-dark border-dark">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3">
               <h4 class="my-0 fw-normal">海外就诊</h4>
             </div>
             <div class="card-body">
@@ -163,8 +163,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-dark">
-            <div class="card-header py-3 text-bg-dark custom-bg">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3">
               <h4 class="my-0 fw-normal">生产后</h4>
             </div>
             <div class="card-body">
